@@ -1,8 +1,8 @@
 Package: fscaret
 Type: Package
 Title: Automated Feature Selection from 'caret'
-Version: 0.9.4.2
-Date: 2017-12-07
+Version: 0.9.4.3
+Date: 2018-02-26
 Depends: R (>= 3.1.0), caret, gsubfn, hmeasure, utils, parallel
 Suggests: ada, arm, Boruta, bst, C50, car, caTools, class, Cubist,
         e1071, earth (>= 2.2-3), elasticnet, ellipse, evtree,
@@ -23,9 +23,9 @@ Description: Automated feature selection using variety of models
         provided by 'caret' package.
         This work was funded by Poland-Singapore bilateral cooperation
         project no 2/3/POL-SIN/2012.
-Packaged: 2017-12-07 15:43:37 UTC; kuba
+Packaged: 2018-02-26 09:54:31 UTC; kuba
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2017-12-12 21:51:55 UTC
+Date/Publication: 2018-02-26 12:30:04 UTC
 Author: Jakub Szlek [aut, cre],
   Aleksander Mendyk [ctb]
