@@ -1,16 +1,16 @@
-9e5ac0b93c3ca98aab313da3074cf31d *DESCRIPTION
+f29e1ac5ba827abe3baee391e0f4cf69 *DESCRIPTION
 9419986e6fe937f2041ff3d2594453cd *NAMESPACE
 6a4372bcb4b3d0e283b6bfd07feaac0b *R/MSE.R
 fad361e51e4e126ae1bd160e26be1003 *R/RMSE.R
-23d52e9140399c631ad67d26e70f016b *R/classVarImp.R
+58ae00bed6aa6f37421f8bf2ecfdd48c *R/classVarImp.R
 63a6644ac64c6cbb8b3e5f7ce1267d1d *R/dataPreprocess.R
-2c5d3fd49abd8ceb74f3c98d2bade5b0 *R/fscaret.R
+3508287eed2e3ffb9378140e891835f3 *R/fscaret.R
 2d6fe3925f5924156cb83de3b51d9a3f *R/funcClass.all.R
 23eacac586077390832615001ccdd3a6 *R/funcReg.all.R
-569123507c3059681284642a862c8d8b *R/impCalc.R
+f549846f77b2c374069b29cea3700060 *R/impCalc.R
 2afa4ec13630ff492d5f6456f744b3c9 *R/imputeMean.R
 e83d0af82349f78dc4436942258eba0b *R/installPckg.R
-c9f746e2cb03387bcea8742364b147eb *R/regVarImp.R
+1349ae71f4cc472a58d10bbe0cf40f82 *R/regVarImp.R
 75bb37c88645180e6c78729e53cc297f *R/requiredPackages.R
 80757677902a94b149208bcafade35f3 *R/timeout.R
 73a174a4e9ac12be30bd500397b5d6f9 *build/vignette.rds
@@ -20,13 +20,13 @@ fa747f3111587c646da994f25dbfdc5d *data/dataset.test.RData
 3b4ce0bb0c3e705116984252b7b0f4b2 *data/funcRegPred.RData
 73a4360a6e7a310dbf1ce90986f2e876 *data/requiredPackages.RData
 a92882a9483305d31da69c7e87077972 *inst/CITATION
-f954f9b1674951fc1bd5c43501d1bfff *inst/NEWS.Rd
+dc9ed9af626b5054acfcaf9f4e7d4dfa *inst/NEWS.Rd
 38fa446c09ced756f46df7cac9c1d8da *inst/doc/fscaret.R
 8d96629f9c0a3764d445bdd2f7ba8d57 *inst/doc/fscaret.Rnw
-f2020515c03306eff4058421e429c591 *inst/doc/fscaret.pdf
+a5570a08566b20758153b92c806cbd22 *inst/doc/fscaret.pdf
 197f0b6489d8bd428357e9938eed9bb3 *man/MSE.Rd
 452253fe4a1d6a6bc1f32ca402861b08 *man/RMSE.Rd
-fddd92fccd7be462c6e7b045fcbb43f3 *man/classVarImp.Rd
+2fc643ea62bfb56ff843985679888439 *man/classVarImp.Rd
 ed5d18925a1e3ca5aea763131aa5a30b *man/dataPreprocess.Rd
 c10e398d4459c5c53505ef88332e6546 *man/dataset.test.Rd
 ff61b1788d18e1e8fd6d4c0edf2d9805 *man/dataset.train.Rd
@@ -37,7 +37,7 @@ ddf35ceb9808de1c723fffa364491322 *man/fscaret.Rd
 6977f8b32ed1633db28fcba9debf88a9 *man/impCalc.Rd
 5dbf4ece4a03ac37f891cf56684be8d1 *man/imputeMean.Rd
 3ef75a5d12c1a84c1eb450da41232998 *man/installPckg.Rd
-d18a085a759d6b37c9b3a9b098d8d82b *man/regVarImp.Rd
+6aa7e9d818f4f5e2938e3d28f3f5656d *man/regVarImp.Rd
 315637019cc8dd12e296363887b7bb91 *man/requiredPackages.Rd
 41c99a69aefa7c4225229ff2a875cf34 *man/timeout.Rd
 8d96629f9c0a3764d445bdd2f7ba8d57 *vignettes/fscaret.Rnw
